11-k8s/pod-备份文件不要动.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
spec:
  containers:
    - name: nginx
      image: nginx:alpine
      ports:
        - containerPort: 80

#          kubectl port-forward pod/nginx-pod 8080:80 --address 0.0.0.0
